
nobase_dist_share_DATA =
nobase_nodist_share_DATA =

nobase_dist_share_DATA += \
	pixmaps/AfterStep.xpm \
	pixmaps/fvwm_clipped.png \
	pixmaps/fvwm_noback.png \
	pixmaps/fvwm.png \
	pixmaps/fvwm.xpm \
	pixmaps/lxde-icon.png \
	pixmaps/mini.fvwm.xpm \
	pixmaps/mini-start.xpm \
	pixmaps/pekwm_logo2.png \
	pixmaps/pekwm_logo.png \
	pixmaps/redhat-starthere.png \
	pixmaps/start-menu.xpm \
	pixmaps/window-above.xpm \
	pixmaps/window-below.xpm \
	pixmaps/window-border.xpm \
	pixmaps/window-close.xpm \
	pixmaps/window-command.xpm \
	pixmaps/window-focus.xpm \
	pixmaps/window-kill.xpm \
	pixmaps/window-lower.xpm \
	pixmaps/WindowMaker.png \
	pixmaps/window-maximize-b.xpm \
	pixmaps/window-maximize-h.xpm \
	pixmaps/window-maximize-v.xpm \
	pixmaps/window-maximize.xpm \
	pixmaps/window-menu.xpm \
	pixmaps/window-minimize.xpm \
	pixmaps/window-move.xpm \
	pixmaps/window-raise.xpm \
	pixmaps/window-resize.xpm \
	pixmaps/window-sendto.xpm \
	pixmaps/window-shade.xpm \
	pixmaps/window-snap.xpm \
	pixmaps/window-stick.xpm \
	pixmaps/window-titlebar.xpm \
	pixmaps/window-unshade.xpm


nobase_dist_share_DATA += \
	icons/hicolor/48x48/devices/chip.png \
	icons/hicolor/48x48/devices/ExpansionCard.png \
	icons/hicolor/48x48/devices/Harddrive.png \
	icons/hicolor/48x48/devices/Memory.png \
	icons/hicolor/48x48/devices/Notebook.png \
	icons/hicolor/48x48/devices/PLIP.png \
	icons/hicolor/48x48/devices/plip.png \
	icons/hicolor/48x48/devices/USB.png \
	icons/hicolor/56x56/devices/Computer.png \
	icons/hicolor/56x56/devices/Harddrive2.png

nobase_dist_share_DATA += \
	icons/hicolor/48x48/status/aptdaemon-add.png \
	icons/hicolor/48x48/status/aptdaemon-cleanup.png \
	icons/hicolor/48x48/status/aptdaemon-delete.png \
	icons/hicolor/48x48/status/aptdaemon-download.png \
	icons/hicolor/48x48/status/aptdaemon-resolve.png \
	icons/hicolor/48x48/status/aptdaemon-update-cache.png \
	icons/hicolor/48x48/status/aptdaemon-upgrade.png \
	icons/hicolor/48x48/status/aptdaemon-wait.png \
	icons/hicolor/48x48/status/aptdaemon-working.png

nobase_dist_share_DATA += \
	icons/hicolor/scalable/actions/unexicon-new.svg \
	icons/hicolor/scalable/actions/window-close2.svg \
	icons/hicolor/scalable/actions/window-close.svg \
	icons/hicolor/scalable/actions/window-kill2.svg \
	icons/hicolor/scalable/actions/window-kill.svg \
	icons/hicolor/scalable/actions/window-maximize2.svg \
	icons/hicolor/scalable/actions/window-maximize-b2.svg \
	icons/hicolor/scalable/actions/window-maximize-b.svg \
	icons/hicolor/scalable/actions/window-maximize-h2.svg \
	icons/hicolor/scalable/actions/window-maximize-h.svg \
	icons/hicolor/scalable/actions/window-maximize.svg \
	icons/hicolor/scalable/actions/window-maximize-v2.svg \
	icons/hicolor/scalable/actions/window-maximize-v.svg \
	icons/hicolor/scalable/actions/window-minimize2.svg \
	icons/hicolor/scalable/actions/window-minimize.svg \
	icons/hicolor/scalable/actions/window-move.svg \
	icons/hicolor/scalable/actions/window-resize.svg \
	icons/hicolor/scalable/actions/window-sendto.svg \
	icons/hicolor/scalable/actions/window-shade2.svg \
	icons/hicolor/scalable/actions/window-shade.svg \
	icons/hicolor/scalable/actions/window-stick.svg


nobase_dist_share_DATA += \
	icons/hicolor/16x16/actions/application-exit.png \
	icons/hicolor/16x16/actions/gnome-logout.png \
	icons/hicolor/16x16/actions/system-lock-screen.png \
	icons/hicolor/16x16/actions/system-log-out.png \
	icons/hicolor/16x16/actions/system-reboot.png \
	icons/hicolor/16x16/actions/system-shutdown.png \
	icons/hicolor/16x16/actions/system-suspend-hibernate.png \
	icons/hicolor/16x16/actions/system-suspend.png \
	icons/hicolor/16x16/actions/system-switch-user.png \
	icons/hicolor/16x16/actions/window-above.png \
	icons/hicolor/16x16/actions/window-below.png \
	icons/hicolor/16x16/actions/window-border.png \
	icons/hicolor/16x16/actions/window-close.png \
	icons/hicolor/16x16/actions/window-command.png \
	icons/hicolor/16x16/actions/window-focus.png \
	icons/hicolor/16x16/actions/window-kill.png \
	icons/hicolor/16x16/actions/window-lower.png \
	icons/hicolor/16x16/actions/window-maximize-b.png \
	icons/hicolor/16x16/actions/window-maximize-h.png \
	icons/hicolor/16x16/actions/window-maximize.png \
	icons/hicolor/16x16/actions/window-maximize-v.png \
	icons/hicolor/16x16/actions/window-menu.png \
	icons/hicolor/16x16/actions/window-minimize.png \
	icons/hicolor/16x16/actions/window-move.png \
	icons/hicolor/16x16/actions/window-raise.png \
	icons/hicolor/16x16/actions/window-resize.png \
	icons/hicolor/16x16/actions/window-sendto.png \
	icons/hicolor/16x16/actions/window-shade.png \
	icons/hicolor/16x16/actions/window-snap.png \
	icons/hicolor/16x16/actions/window-stick.png \
	icons/hicolor/16x16/actions/window-titlebar.png \
	icons/hicolor/16x16/actions/window-unshade.png \
	icons/hicolor/22x22/actions/application-exit.png \
	icons/hicolor/22x22/actions/gnome-logout.png \
	icons/hicolor/22x22/actions/gnome-session-halt.png \
	icons/hicolor/22x22/actions/gnome-session-hibernate.png \
	icons/hicolor/22x22/actions/gnome-session-logout.png \
	icons/hicolor/22x22/actions/gnome-session-reboot.png \
	icons/hicolor/22x22/actions/gnome-session-suspend.png \
	icons/hicolor/22x22/actions/gnome-session-switch.png \
	icons/hicolor/22x22/actions/system-lock-screen.png \
	icons/hicolor/22x22/actions/system-log-out.png \
	icons/hicolor/22x22/actions/system-reboot.png \
	icons/hicolor/22x22/actions/system-shutdown.png \
	icons/hicolor/22x22/actions/system-suspend-hibernate.png \
	icons/hicolor/22x22/actions/system-suspend.png \
	icons/hicolor/22x22/actions/system-switch-user.png \
	icons/hicolor/32x32/actions/application-exit.png \
	icons/hicolor/32x32/actions/system-lock-screen.png \
	icons/hicolor/32x32/actions/system-log-out.png \
	icons/hicolor/32x32/actions/system-reboot.png \
	icons/hicolor/32x32/actions/system-shutdown.png \
	icons/hicolor/32x32/actions/system-suspend-hibernate.png \
	icons/hicolor/32x32/actions/system-suspend.png \
	icons/hicolor/32x32/actions/system-switch-user.png \
	icons/hicolor/48x48/actions/application-exit.png \
	icons/hicolor/48x48/actions/gnome-logout.png \
	icons/hicolor/48x48/actions/gnome-session-halt.png \
	icons/hicolor/48x48/actions/gnome-session-hibernate.png \
	icons/hicolor/48x48/actions/gnome-session-logout.png \
	icons/hicolor/48x48/actions/gnome-session-reboot.png \
	icons/hicolor/48x48/actions/gnome-session-suspend.png \
	icons/hicolor/48x48/actions/gnome-session-switch.png \
	icons/hicolor/48x48/actions/PadlockClosed.png \
	icons/hicolor/48x48/actions/PadlockOpen.png \
	icons/hicolor/48x48/actions/system-lock-screen.png \
	icons/hicolor/48x48/actions/system-log-out.png \
	icons/hicolor/48x48/actions/system-reboot.png \
	icons/hicolor/48x48/actions/system-shutdown.png \
	icons/hicolor/48x48/actions/system-suspend-hibernate.png \
	icons/hicolor/48x48/actions/system-suspend.png \
	icons/hicolor/48x48/actions/system-switch-user.png \
	icons/hicolor/64x64/actions/application-exit.png \
	icons/hicolor/64x64/actions/system-lock-screen.png \
	icons/hicolor/64x64/actions/system-log-out.png \
	icons/hicolor/64x64/actions/system-reboot.png \
	icons/hicolor/64x64/actions/system-shutdown.png \
	icons/hicolor/64x64/actions/system-suspend-hibernate.png \
	icons/hicolor/64x64/actions/system-suspend.png \
	icons/hicolor/64x64/actions/system-switch-user.png

nobase_dist_share_DATA += \
	icons/hicolor/16x16/apps/fvwm-crystal.png \
	icons/hicolor/16x16/apps/fvwm.png \
	icons/hicolor/16x16/apps/gnome-logout.png \
	icons/hicolor/16x16/apps/gnome-session-halt.png \
	icons/hicolor/16x16/apps/gnome-session-hibernate.png \
	icons/hicolor/16x16/apps/gnome-session-logout.png \
	icons/hicolor/16x16/apps/gnome-session-reboot.png \
	icons/hicolor/16x16/apps/gnome-session-sleep.png \
	icons/hicolor/16x16/apps/gnome-session-suspend.png \
	icons/hicolor/16x16/apps/gnome-session-switch.png \
	icons/hicolor/16x16/apps/icewm.png \
	icons/hicolor/16x16/apps/start-here.png \
	icons/hicolor/16x16/apps/WindowMaker.png \
	icons/hicolor/22x22/apps/fvwm-crystal.png \
	icons/hicolor/22x22/apps/fvwm.png \
	icons/hicolor/22x22/apps/gnome-logout.png \
	icons/hicolor/22x22/apps/gnome-session-halt.png \
	icons/hicolor/22x22/apps/gnome-session-hibernate.png \
	icons/hicolor/22x22/apps/gnome-session-logout.png \
	icons/hicolor/22x22/apps/gnome-session-reboot.png \
	icons/hicolor/22x22/apps/gnome-session-sleep.png \
	icons/hicolor/22x22/apps/gnome-session-suspend.png \
	icons/hicolor/22x22/apps/gnome-session-switch.png \
	icons/hicolor/24x24/apps/fvwm.png \
	icons/hicolor/24x24/apps/gnome-session-halt.png \
	icons/hicolor/24x24/apps/gnome-session-hibernate.png \
	icons/hicolor/24x24/apps/gnome-session-reboot.png \
	icons/hicolor/24x24/apps/gnome-session-sleep.png \
	icons/hicolor/24x24/apps/gnome-session-suspend.png \
	icons/hicolor/24x24/apps/gnome-session-switch.png \
	icons/hicolor/32x32/apps/fvwm-crystal.png \
	icons/hicolor/32x32/apps/fvwm.png \
	icons/hicolor/32x32/apps/gnome-logout.png \
	icons/hicolor/32x32/apps/gnome-session-halt.png \
	icons/hicolor/32x32/apps/gnome-session-hibernate.png \
	icons/hicolor/32x32/apps/gnome-session-logout.png \
	icons/hicolor/32x32/apps/gnome-session-reboot.png \
	icons/hicolor/32x32/apps/gnome-session-sleep.png \
	icons/hicolor/32x32/apps/gnome-session-suspend.png \
	icons/hicolor/32x32/apps/gnome-session-switch.png \
	icons/hicolor/32x32/apps/icewm.png \
	icons/hicolor/32x32/apps/WindowMaker.png \
	icons/hicolor/32x32/apps/xclock.png \
	icons/hicolor/36x36/apps/fvwm.png \
	icons/hicolor/48x48/apps/AfterStep2.png \
	icons/hicolor/48x48/apps/AfterStep.png \
	icons/hicolor/48x48/apps/fvwm-crystal.png \
	icons/hicolor/48x48/apps/fvwm.png \
	icons/hicolor/48x48/apps/gnome-logout.png \
	icons/hicolor/48x48/apps/gnome-session-halt.png \
	icons/hicolor/48x48/apps/gnome-session-hibernate.png \
	icons/hicolor/48x48/apps/gnome-session-logout.png \
	icons/hicolor/48x48/apps/gnome-session-reboot.png \
	icons/hicolor/48x48/apps/gnome-session-suspend.png \
	icons/hicolor/48x48/apps/gnome-session-switch.png \
	icons/hicolor/48x48/apps/GNUStep3D.png \
	icons/hicolor/48x48/apps/GNUStepGlow.png \
	icons/hicolor/48x48/apps/GNUStep.png \
	icons/hicolor/48x48/apps/icewm.png \
	icons/hicolor/48x48/apps/WindowMaker.png \
	icons/hicolor/48x48/apps/XApp.png \
	icons/hicolor/48x48/apps/xclock.png \
	icons/hicolor/48x48/apps/XWindow2.png \
	icons/hicolor/48x48/apps/XWindow3.png \
	icons/hicolor/48x48/apps/XWindow.png \
	icons/hicolor/56x56/apps/AfterStep3.png \
	icons/hicolor/56x56/apps/AfterStep4.png \
	icons/hicolor/56x56/apps/start-here.png \
	icons/hicolor/64x64/apps/allin1.png \
	icons/hicolor/64x64/apps/fvwm.png \
	icons/hicolor/64x64/apps/gnome-logout.png \
	icons/hicolor/64x64/apps/gnome-session-halt.png \
	icons/hicolor/64x64/apps/gnome-session-hibernate.png \
	icons/hicolor/64x64/apps/gnome-session-logout.png \
	icons/hicolor/64x64/apps/gnome-session-reboot.png \
	icons/hicolor/64x64/apps/gnome-session-suspend.png \
	icons/hicolor/64x64/apps/gnome-session-switch.png \
	icons/hicolor/64x64/apps/start-here.png \
	icons/hicolor/64x64/apps/xclock.png \
	icons/hicolor/128x128/apps/fvwm.png \
	icons/hicolor/192x192/apps/start-here.png

scalable_ICONS = \
	icons/hicolor/scalable/apps/archlinux-wm-awesome.svg \
	icons/hicolor/scalable/apps/archlinux-wm-base.svg \
	icons/hicolor/scalable/apps/archlinux-wm-blackbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-dwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-fluxbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-fvwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-gnome.svg \
	icons/hicolor/scalable/apps/archlinux-wm-icewm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-jwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kde2.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kdemod.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kde.svg \
	icons/hicolor/scalable/apps/archlinux-wm-openbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-pekwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-twm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-wmaker.svg \
	icons/hicolor/scalable/apps/archlinux-wm-xfce.svg \
	icons/hicolor/scalable/apps/archlinux-wm-xmonad.svg \
	icons/hicolor/scalable/apps/blackbox.svg \
	icons/hicolor/scalable/apps/ctwm.svg \
	icons/hicolor/scalable/apps/fluxbox.svg \
	icons/hicolor/scalable/apps/GNUstep.svg \
	icons/hicolor/scalable/apps/GNUstep3D.svg \
	icons/hicolor/scalable/apps/jwm.svg \
	icons/hicolor/scalable/apps/mwm.svg \
	icons/hicolor/scalable/apps/pekwm.svg \
	icons/hicolor/scalable/apps/twm.svg \
	icons/hicolor/scalable/apps/vtwm.svg \
	icons/hicolor/scalable/apps/wmaker.svg \
	icons/hicolor/scalable/apps/xlogo.svg

nobase_dist_share_DATA += \
	$(scalable_ICONS)

install-data-local:
	$(NORMAL_INSTALL)
	list="$(scalable_ICONS)" ; for f in $$list ; do \
		p=`basename "$$f" .svg`.png ; \
		d=; if test -f "$(srcdir)/$$f" ; then d="$(srcdir)/" ; fi ; \
		for s in 16 22 24 32 48 56 64 72 96 128 256 ; do \
			t="$(DESTDIR)$(sharedir)/icons/hicolor/$${s}x$${s}/apps" ; \
			test -d "$$t" || $(MKDIR_P) "$$t" ; \
			rsvg-convert -w $$s -h $$s -f png "$$d$$f" -o "$$t/$$p" ; \
		done ; \
	done

