
nobase_dist_share_DATA =
nobase_nodist_share_DATA =

nobase_dist_share_DATA += \
	pixmaps/AfterStep.xpm \
	pixmaps/fltk-editor.xpm \
	pixmaps/fvwm_clipped.png \
	pixmaps/fvwm_noback.png \
	pixmaps/fvwm.png \
	pixmaps/fvwm.xpm \
	pixmaps/gv.png \
	pixmaps/gv.xpm \
	pixmaps/imagic.png \
	pixmaps/imagic.xpm \
	pixmaps/lxde-icon.png \
	pixmaps/metacity.png \
	pixmaps/mini.fvwm.xpm \
	pixmaps/mini-start.xpm \
	pixmaps/pekwm_logo2.png \
	pixmaps/pekwm_logo.png \
	pixmaps/redhat-starthere.png \
	pixmaps/start-menu.xpm \
	pixmaps/window-above.xpm \
	pixmaps/window-below.xpm \
	pixmaps/window-border.xpm \
	pixmaps/window-close.xpm \
	pixmaps/window-command.xpm \
	pixmaps/window-focus.xpm \
	pixmaps/window-kill.xpm \
	pixmaps/window-lower.xpm \
	pixmaps/window-maximize-b.xpm \
	pixmaps/window-maximize-h.xpm \
	pixmaps/window-maximize-v.xpm \
	pixmaps/window-maximize.xpm \
	pixmaps/window-menu.xpm \
	pixmaps/window-minimize.xpm \
	pixmaps/window-move.xpm \
	pixmaps/window-normal.xpm \
	pixmaps/window-raise.xpm \
	pixmaps/window-resize.xpm \
	pixmaps/window-sendto-d.xpm \
	pixmaps/window-sendto-l.xpm \
	pixmaps/window-sendto-r.xpm \
	pixmaps/window-sendto-u.xpm \
	pixmaps/window-sendto.xpm \
	pixmaps/window-shade.xpm \
	pixmaps/window-snap.xpm \
	pixmaps/window-stick.xpm \
	pixmaps/window-titlebar.xpm \
	pixmaps/window-unmaximize-b.xpm \
	pixmaps/window-unmaximize-h.xpm \
	pixmaps/window-unmaximize-v.xpm \
	pixmaps/window-unmaximize.xpm \
	pixmaps/window-unminimize.xpm \
	pixmaps/window-unshade.xpm \
	pixmaps/window-unstick.xpm \
	pixmaps/xdvi.png \
	pixmaps/xdvi.xpm \
	pixmaps/xv.png \
	pixmaps/xv.xpm


nobase_dist_share_DATA += \
	icons/Mist/16x16/apps/start-here.png \
	icons/Mist/192x192/apps/start-here.png \
	icons/Mist/64x64/apps/start-here.png

nobase_dist_share_DATA += \
	icons/hicolor/48x48/devices/chip.png \
	icons/hicolor/48x48/devices/ExpansionCard.png \
	icons/hicolor/48x48/devices/Harddrive.png \
	icons/hicolor/48x48/devices/Memory.png \
	icons/hicolor/48x48/devices/Notebook.png \
	icons/hicolor/48x48/devices/PLIP.png \
	icons/hicolor/48x48/devices/plip.png \
	icons/hicolor/48x48/devices/USB.png \
	icons/hicolor/56x56/devices/Computer.png \
	icons/hicolor/56x56/devices/Harddrive2.png

nobase_dist_share_DATA += \
	icons/hicolor/48x48/status/aptdaemon-add.png \
	icons/hicolor/48x48/status/aptdaemon-cleanup.png \
	icons/hicolor/48x48/status/aptdaemon-delete.png \
	icons/hicolor/48x48/status/aptdaemon-download.png \
	icons/hicolor/48x48/status/aptdaemon-resolve.png \
	icons/hicolor/48x48/status/aptdaemon-update-cache.png \
	icons/hicolor/48x48/status/aptdaemon-upgrade.png \
	icons/hicolor/48x48/status/aptdaemon-wait.png \
	icons/hicolor/48x48/status/aptdaemon-working.png

nobase_dist_share_DATA += \
	icons/hicolor/scalable/actions/unexicon-new.svg \
	icons/hicolor/scalable/actions/window-close2.svg \
	icons/hicolor/scalable/actions/window-close.svg \
	icons/hicolor/scalable/actions/window-kill2.svg \
	icons/hicolor/scalable/actions/window-kill.svg \
	icons/hicolor/scalable/actions/window-maximize2.svg \
	icons/hicolor/scalable/actions/window-maximize-b2.svg \
	icons/hicolor/scalable/actions/window-maximize-b.svg \
	icons/hicolor/scalable/actions/window-maximize-h2.svg \
	icons/hicolor/scalable/actions/window-maximize-h.svg \
	icons/hicolor/scalable/actions/window-maximize.svg \
	icons/hicolor/scalable/actions/window-maximize-v2.svg \
	icons/hicolor/scalable/actions/window-maximize-v.svg \
	icons/hicolor/scalable/actions/window-minimize2.svg \
	icons/hicolor/scalable/actions/window-minimize.svg \
	icons/hicolor/scalable/actions/window-move.svg \
	icons/hicolor/scalable/actions/window-resize.svg \
	icons/hicolor/scalable/actions/window-sendto.svg \
	icons/hicolor/scalable/actions/window-shade2.svg \
	icons/hicolor/scalable/actions/window-shade.svg \
	icons/hicolor/scalable/actions/window-stick.svg


nobase_dist_share_DATA += \
	icons/hicolor/16x16/actions/application-exit.png \
	icons/hicolor/16x16/actions/gnome-logout.png \
	icons/hicolor/16x16/actions/system-lock-screen.png \
	icons/hicolor/16x16/actions/system-log-out.png \
	icons/hicolor/16x16/actions/system-reboot.png \
	icons/hicolor/16x16/actions/system-shutdown.png \
	icons/hicolor/16x16/actions/system-suspend-hibernate.png \
	icons/hicolor/16x16/actions/system-suspend.png \
	icons/hicolor/16x16/actions/system-switch-user.png \
	icons/hicolor/16x16/actions/window-above.png \
	icons/hicolor/16x16/actions/window-below.png \
	icons/hicolor/16x16/actions/window-border.png \
	icons/hicolor/16x16/actions/window-close.png \
	icons/hicolor/16x16/actions/window-command.png \
	icons/hicolor/16x16/actions/window-focus.png \
	icons/hicolor/16x16/actions/window-kill.png \
	icons/hicolor/16x16/actions/window-lower.png \
	icons/hicolor/16x16/actions/window-maximize-b.png \
	icons/hicolor/16x16/actions/window-maximize-h.png \
	icons/hicolor/16x16/actions/window-maximize.png \
	icons/hicolor/16x16/actions/window-maximize-v.png \
	icons/hicolor/16x16/actions/window-menu.png \
	icons/hicolor/16x16/actions/window-minimize.png \
	icons/hicolor/16x16/actions/window-move.png \
	icons/hicolor/16x16/actions/window-normal.png \
	icons/hicolor/16x16/actions/window-raise.png \
	icons/hicolor/16x16/actions/window-resize.png \
	icons/hicolor/16x16/actions/window-sendto-d.png \
	icons/hicolor/16x16/actions/window-sendto-l.png \
	icons/hicolor/16x16/actions/window-sendto.png \
	icons/hicolor/16x16/actions/window-sendto-r.png \
	icons/hicolor/16x16/actions/window-sendto-u.png \
	icons/hicolor/16x16/actions/window-shade.png \
	icons/hicolor/16x16/actions/window-snap.png \
	icons/hicolor/16x16/actions/window-stick.png \
	icons/hicolor/16x16/actions/window-titlebar.png \
	icons/hicolor/16x16/actions/window-unmaximize-b.png \
	icons/hicolor/16x16/actions/window-unmaximize-h.png \
	icons/hicolor/16x16/actions/window-unmaximize.png \
	icons/hicolor/16x16/actions/window-unmaximize-v.png \
	icons/hicolor/16x16/actions/window-unminimize.png \
	icons/hicolor/16x16/actions/window-unshade.png \
	icons/hicolor/16x16/actions/window-unstick.png \
	icons/hicolor/22x22/actions/application-exit.png \
	icons/hicolor/22x22/actions/gnome-logout.png \
	icons/hicolor/22x22/actions/gnome-session-halt.png \
	icons/hicolor/22x22/actions/gnome-session-hibernate.png \
	icons/hicolor/22x22/actions/gnome-session-logout.png \
	icons/hicolor/22x22/actions/gnome-session-reboot.png \
	icons/hicolor/22x22/actions/gnome-session-suspend.png \
	icons/hicolor/22x22/actions/gnome-session-switch.png \
	icons/hicolor/22x22/actions/system-lock-screen.png \
	icons/hicolor/22x22/actions/system-log-out.png \
	icons/hicolor/22x22/actions/system-reboot.png \
	icons/hicolor/22x22/actions/system-shutdown.png \
	icons/hicolor/22x22/actions/system-suspend-hibernate.png \
	icons/hicolor/22x22/actions/system-suspend.png \
	icons/hicolor/22x22/actions/system-switch-user.png \
	icons/hicolor/32x32/actions/application-exit.png \
	icons/hicolor/32x32/actions/system-lock-screen.png \
	icons/hicolor/32x32/actions/system-log-out.png \
	icons/hicolor/32x32/actions/system-reboot.png \
	icons/hicolor/32x32/actions/system-shutdown.png \
	icons/hicolor/32x32/actions/system-suspend-hibernate.png \
	icons/hicolor/32x32/actions/system-suspend.png \
	icons/hicolor/32x32/actions/system-switch-user.png \
	icons/hicolor/48x48/actions/application-exit.png \
	icons/hicolor/48x48/actions/gnome-logout.png \
	icons/hicolor/48x48/actions/gnome-session-halt.png \
	icons/hicolor/48x48/actions/gnome-session-hibernate.png \
	icons/hicolor/48x48/actions/gnome-session-logout.png \
	icons/hicolor/48x48/actions/gnome-session-reboot.png \
	icons/hicolor/48x48/actions/gnome-session-suspend.png \
	icons/hicolor/48x48/actions/gnome-session-switch.png \
	icons/hicolor/48x48/actions/PadlockClosed.png \
	icons/hicolor/48x48/actions/PadlockOpen.png \
	icons/hicolor/48x48/actions/system-lock-screen.png \
	icons/hicolor/48x48/actions/system-log-out.png \
	icons/hicolor/48x48/actions/system-reboot.png \
	icons/hicolor/48x48/actions/system-shutdown.png \
	icons/hicolor/48x48/actions/system-suspend-hibernate.png \
	icons/hicolor/48x48/actions/system-suspend.png \
	icons/hicolor/48x48/actions/system-switch-user.png \
	icons/hicolor/64x64/actions/application-exit.png \
	icons/hicolor/64x64/actions/system-lock-screen.png \
	icons/hicolor/64x64/actions/system-log-out.png \
	icons/hicolor/64x64/actions/system-reboot.png \
	icons/hicolor/64x64/actions/system-shutdown.png \
	icons/hicolor/64x64/actions/system-suspend-hibernate.png \
	icons/hicolor/64x64/actions/system-suspend.png \
	icons/hicolor/64x64/actions/system-switch-user.png

nobase_dist_share_DATA += \
	icons/hicolor/16x16/apps/chbg.png \
	icons/hicolor/16x16/apps/fvwm-crystal.png \
	icons/hicolor/16x16/apps/fvwm.png \
	icons/hicolor/16x16/apps/gnome-logout.png \
	icons/hicolor/16x16/apps/gnome-session-halt.png \
	icons/hicolor/16x16/apps/gnome-session-hibernate.png \
	icons/hicolor/16x16/apps/gnome-session-logout.png \
	icons/hicolor/16x16/apps/gnome-session-reboot.png \
	icons/hicolor/16x16/apps/gnome-session-sleep.png \
	icons/hicolor/16x16/apps/gnome-session-suspend.png \
	icons/hicolor/16x16/apps/gnome-session-switch.png \
	icons/hicolor/16x16/apps/icewm.png \
	icons/hicolor/16x16/apps/start-here.png \
	icons/hicolor/16x16/apps/WindowMaker.png \
	icons/hicolor/192x192/apps/start-here.png \
	icons/hicolor/22x22/apps/aterm.png \
	icons/hicolor/22x22/apps/fvwm-crystal.png \
	icons/hicolor/22x22/apps/fvwm.png \
	icons/hicolor/22x22/apps/gnome-logout.png \
	icons/hicolor/22x22/apps/gnome-session-halt.png \
	icons/hicolor/22x22/apps/gnome-session-hibernate.png \
	icons/hicolor/22x22/apps/gnome-session-logout.png \
	icons/hicolor/22x22/apps/gnome-session-reboot.png \
	icons/hicolor/22x22/apps/gnome-session-sleep.png \
	icons/hicolor/22x22/apps/gnome-session-suspend.png \
	icons/hicolor/22x22/apps/gnome-session-switch.png \
	icons/hicolor/22x22/apps/nano.png \
	icons/hicolor/24x24/apps/fvwm.png \
	icons/hicolor/24x24/apps/gnome-session-halt.png \
	icons/hicolor/24x24/apps/gnome-session-hibernate.png \
	icons/hicolor/24x24/apps/gnome-session-reboot.png \
	icons/hicolor/24x24/apps/gnome-session-sleep.png \
	icons/hicolor/24x24/apps/gnome-session-suspend.png \
	icons/hicolor/24x24/apps/gnome-session-switch.png \
	icons/hicolor/24x24/apps/postscript-viewer.png \
	icons/hicolor/32x32/apps/acroread.png \
	icons/hicolor/32x32/apps/amsn.png \
	icons/hicolor/32x32/apps/arach.png \
	icons/hicolor/32x32/apps/ArmyOps.png \
	icons/hicolor/32x32/apps/aterm.png \
	icons/hicolor/32x32/apps/bluefish.png \
	icons/hicolor/32x32/apps/cards.png \
	icons/hicolor/32x32/apps/cdburner.png \
	icons/hicolor/32x32/apps/cdrom.png \
	icons/hicolor/32x32/apps/chbg.png \
	icons/hicolor/32x32/apps/clock.png \
	icons/hicolor/32x32/apps/compression.png \
	icons/hicolor/32x32/apps/concentration.png \
	icons/hicolor/32x32/apps/configuration.png \
	icons/hicolor/32x32/apps/dice.png \
	icons/hicolor/32x32/apps/dillo.png \
	icons/hicolor/32x32/apps/dosbox.png \
	icons/hicolor/32x32/apps/dvd.png \
	icons/hicolor/32x32/apps/editorWindow.png \
	icons/hicolor/32x32/apps/evolution.png \
	icons/hicolor/32x32/apps/exit.png \
	icons/hicolor/32x32/apps/file-roller.png \
	icons/hicolor/32x32/apps/file_transfer.png \
	icons/hicolor/32x32/apps/floppy.png \
	icons/hicolor/32x32/apps/fluxbox.png \
	icons/hicolor/32x32/apps/frozen-bubble.png \
	icons/hicolor/32x32/apps/ftp.png \
	icons/hicolor/32x32/apps/fvwm-crystal.png \
	icons/hicolor/32x32/apps/fvwm.png \
	icons/hicolor/32x32/apps/gaim.png \
	icons/hicolor/32x32/apps/gcalctool.png \
	icons/hicolor/32x32/apps/gedit.png \
	icons/hicolor/32x32/apps/gnome-cd.png \
	icons/hicolor/32x32/apps/gnome-dictionary.png \
	icons/hicolor/32x32/apps/gnome-logout.png \
	icons/hicolor/32x32/apps/gnome-networktool.png \
	icons/hicolor/32x32/apps/gnome-pack-deb.png \
	icons/hicolor/32x32/apps/gnome-pack-rpm.png \
	icons/hicolor/32x32/apps/gnome-panel-screenshot.png \
	icons/hicolor/32x32/apps/gnome-session-halt.png \
	icons/hicolor/32x32/apps/gnome-session-hibernate.png \
	icons/hicolor/32x32/apps/gnome-session-logout.png \
	icons/hicolor/32x32/apps/gnome-session-reboot.png \
	icons/hicolor/32x32/apps/gnome-session-sleep.png \
	icons/hicolor/32x32/apps/gnome-session-suspend.png \
	icons/hicolor/32x32/apps/gnome-session-switch.png \
	icons/hicolor/32x32/apps/gnome-terminal.png \
	icons/hicolor/32x32/apps/gnumeric.png \
	icons/hicolor/32x32/apps/gv.png \
	icons/hicolor/32x32/apps/home-mdk.png \
	icons/hicolor/32x32/apps/home.png \
	icons/hicolor/32x32/apps/ical.png \
	icons/hicolor/32x32/apps/icewm.png \
	icons/hicolor/32x32/apps/k3b.png \
	icons/hicolor/32x32/apps/kedit.png \
	icons/hicolor/32x32/apps/kfm.png \
	icons/hicolor/32x32/apps/kmail.png \
	icons/hicolor/32x32/apps/kppp.png \
	icons/hicolor/32x32/apps/kwrite.png \
	icons/hicolor/32x32/apps/lime.png \
	icons/hicolor/32x32/apps/mozilla-mail.png \
	icons/hicolor/32x32/apps/mozilla.png \
	icons/hicolor/32x32/apps/nano.png \
	icons/hicolor/32x32/apps/nautilus.png \
	icons/hicolor/32x32/apps/netscape.png \
	icons/hicolor/32x32/apps/nvu.png \
	icons/hicolor/32x32/apps/oocalc.png \
	icons/hicolor/32x32/apps/ooffice.png \
	icons/hicolor/32x32/apps/oowriter.png \
	icons/hicolor/32x32/apps/paint.png \
	icons/hicolor/32x32/apps/pan.png \
	icons/hicolor/32x32/apps/pdf.png \
	icons/hicolor/32x32/apps/penguin.png \
	icons/hicolor/32x32/apps/print_printer.png \
	icons/hicolor/32x32/apps/qcad.png \
	icons/hicolor/32x32/apps/readme.png \
	icons/hicolor/32x32/apps/rpm.png \
	icons/hicolor/32x32/apps/samba.png \
	icons/hicolor/32x32/apps/sound.png \
	icons/hicolor/32x32/apps/spreadsheet.png \
	icons/hicolor/32x32/apps/sylpheed.png \
	icons/hicolor/32x32/apps/tbird.png \
	icons/hicolor/32x32/apps/telescope.png \
	icons/hicolor/32x32/apps/toys_section.png \
	icons/hicolor/32x32/apps/trash.png \
	icons/hicolor/32x32/apps/usbkey.png \
	icons/hicolor/32x32/apps/vectorgfx.png \
	icons/hicolor/32x32/apps/videocam.png \
	icons/hicolor/32x32/apps/WindowMaker.png \
	icons/hicolor/32x32/apps/xclock.png \
	icons/hicolor/32x32/apps/xemacs.png \
	icons/hicolor/32x32/apps/xine.png \
	icons/hicolor/32x32/apps/xkill.png \
	icons/hicolor/32x32/apps/xmms.png \
	icons/hicolor/32x32/apps/xpdf.png \
	icons/hicolor/32x32/apps/xscreensaver.png \
	icons/hicolor/32x32/apps/xwc.png \
	icons/hicolor/36x36/apps/fvwm.png \
	icons/hicolor/48x48/apps/acroread.png \
	icons/hicolor/48x48/apps/AfterStep2.png \
	icons/hicolor/48x48/apps/AfterStep.png \
	icons/hicolor/48x48/apps/amsn.png \
	icons/hicolor/48x48/apps/arach.png \
	icons/hicolor/48x48/apps/ArmyOps.png \
	icons/hicolor/48x48/apps/aterm.png \
	icons/hicolor/48x48/apps/bluefish.png \
	icons/hicolor/48x48/apps/cards.png \
	icons/hicolor/48x48/apps/cdburner.png \
	icons/hicolor/48x48/apps/cdrom.png \
	icons/hicolor/48x48/apps/chbg.png \
	icons/hicolor/48x48/apps/clock.png \
	icons/hicolor/48x48/apps/compression.png \
	icons/hicolor/48x48/apps/concentration.png \
	icons/hicolor/48x48/apps/configuration.png \
	icons/hicolor/48x48/apps/dice.png \
	icons/hicolor/48x48/apps/dillo.png \
	icons/hicolor/48x48/apps/dosbox.png \
	icons/hicolor/48x48/apps/dvd.png \
	icons/hicolor/48x48/apps/editorWindow.png \
	icons/hicolor/48x48/apps/evolution.png \
	icons/hicolor/48x48/apps/exit.png \
	icons/hicolor/48x48/apps/file-roller.png \
	icons/hicolor/48x48/apps/file_transfer.png \
	icons/hicolor/48x48/apps/floppy.png \
	icons/hicolor/48x48/apps/frozen-bubble.png \
	icons/hicolor/48x48/apps/ftp.png \
	icons/hicolor/48x48/apps/fvwm-crystal.png \
	icons/hicolor/48x48/apps/fvwm.png \
	icons/hicolor/48x48/apps/gaim.png \
	icons/hicolor/48x48/apps/gcalctool.png \
	icons/hicolor/48x48/apps/gedit.png \
	icons/hicolor/48x48/apps/gnome-cd.png \
	icons/hicolor/48x48/apps/gnome-dictionary.png \
	icons/hicolor/48x48/apps/gnome-logout.png \
	icons/hicolor/48x48/apps/gnome-networktool.png \
	icons/hicolor/48x48/apps/gnome-pack-deb.png \
	icons/hicolor/48x48/apps/gnome-pack-rpm.png \
	icons/hicolor/48x48/apps/gnome-panel-screenshot.png \
	icons/hicolor/48x48/apps/gnome-session-halt.png \
	icons/hicolor/48x48/apps/gnome-session-hibernate.png \
	icons/hicolor/48x48/apps/gnome-session-logout.png \
	icons/hicolor/48x48/apps/gnome-session-reboot.png \
	icons/hicolor/48x48/apps/gnome-session-suspend.png \
	icons/hicolor/48x48/apps/gnome-session-switch.png \
	icons/hicolor/48x48/apps/gnome-terminal.png \
	icons/hicolor/48x48/apps/gnumeric.png \
	icons/hicolor/48x48/apps/GNUStep3D.png \
	icons/hicolor/48x48/apps/GNUStepGlow.png \
	icons/hicolor/48x48/apps/GNUStep.png \
	icons/hicolor/48x48/apps/gv.png \
	icons/hicolor/48x48/apps/home-mdk.png \
	icons/hicolor/48x48/apps/home.png \
	icons/hicolor/48x48/apps/ical.png \
	icons/hicolor/48x48/apps/icewm.png \
	icons/hicolor/48x48/apps/k3b.png \
	icons/hicolor/48x48/apps/kedit.png \
	icons/hicolor/48x48/apps/kfm.png \
	icons/hicolor/48x48/apps/kmail.png \
	icons/hicolor/48x48/apps/kppp.png \
	icons/hicolor/48x48/apps/kwrite.png \
	icons/hicolor/48x48/apps/lime.png \
	icons/hicolor/48x48/apps/mozilla-mail.png \
	icons/hicolor/48x48/apps/mozilla.png \
	icons/hicolor/48x48/apps/nano.png \
	icons/hicolor/48x48/apps/nautilus.png \
	icons/hicolor/48x48/apps/netscape.png \
	icons/hicolor/48x48/apps/nvu.png \
	icons/hicolor/48x48/apps/oocalc.png \
	icons/hicolor/48x48/apps/ooffice.png \
	icons/hicolor/48x48/apps/oowriter.png \
	icons/hicolor/48x48/apps/paint.png \
	icons/hicolor/48x48/apps/pan.png \
	icons/hicolor/48x48/apps/pdf.png \
	icons/hicolor/48x48/apps/penguin.png \
	icons/hicolor/48x48/apps/postscript-viewer.png \
	icons/hicolor/48x48/apps/print_printer.png \
	icons/hicolor/48x48/apps/qcad.png \
	icons/hicolor/48x48/apps/readme.png \
	icons/hicolor/48x48/apps/rpm.png \
	icons/hicolor/48x48/apps/samba.png \
	icons/hicolor/48x48/apps/sound.png \
	icons/hicolor/48x48/apps/spreadsheet.png \
	icons/hicolor/48x48/apps/sylpheed.png \
	icons/hicolor/48x48/apps/tbird.png \
	icons/hicolor/48x48/apps/telescope.png \
	icons/hicolor/48x48/apps/toys_section.png \
	icons/hicolor/48x48/apps/trash.png \
	icons/hicolor/48x48/apps/usbkey.png \
	icons/hicolor/48x48/apps/vectorgfx.png \
	icons/hicolor/48x48/apps/videocam.png \
	icons/hicolor/48x48/apps/WindowMaker.png \
	icons/hicolor/48x48/apps/XApp.png \
	icons/hicolor/48x48/apps/xclock.png \
	icons/hicolor/48x48/apps/xemacs.png \
	icons/hicolor/48x48/apps/xine.png \
	icons/hicolor/48x48/apps/xkill.png \
	icons/hicolor/48x48/apps/xmms.png \
	icons/hicolor/48x48/apps/xpdf.png \
	icons/hicolor/48x48/apps/xscreensaver.png \
	icons/hicolor/48x48/apps/xwc.png \
	icons/hicolor/48x48/apps/XWindow2.png \
	icons/hicolor/48x48/apps/XWindow3.png \
	icons/hicolor/48x48/apps/XWindow.png \
	icons/hicolor/56x56/apps/AfterStep3.png \
	icons/hicolor/56x56/apps/AfterStep4.png \
	icons/hicolor/56x56/apps/arch-logo.png \
	icons/hicolor/56x56/apps/start-here.png \
	icons/hicolor/64x64/apps/allin1.png \
	icons/hicolor/64x64/apps/arch-logo.png \
	icons/hicolor/64x64/apps/fvwm.png \
	icons/hicolor/64x64/apps/gnome-logout.png \
	icons/hicolor/64x64/apps/gnome-session-halt.png \
	icons/hicolor/64x64/apps/gnome-session-hibernate.png \
	icons/hicolor/64x64/apps/gnome-session-logout.png \
	icons/hicolor/64x64/apps/gnome-session-reboot.png \
	icons/hicolor/64x64/apps/gnome-session-suspend.png \
	icons/hicolor/64x64/apps/gnome-session-switch.png \
	icons/hicolor/64x64/apps/GNUstep3D.png \
	icons/hicolor/64x64/apps/GNUstep.png \
	icons/hicolor/64x64/apps/start-here.png \
	icons/hicolor/64x64/apps/xclock.png \
	icons/hicolor/72x72/apps/arch-logo.png \
	icons/hicolor/96x96/apps/arch-logo.png \
	icons/hicolor/128x128/apps/arch-logo.png \
	icons/hicolor/128x128/apps/fvwm.png

scalable_ICONS = \
	icons/hicolor/scalable/apps/2bWM.svg \
	icons/hicolor/scalable/apps/adwm.svg \
	icons/hicolor/scalable/apps/aewm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-awesome.svg \
	icons/hicolor/scalable/apps/archlinux-wm-base.svg \
	icons/hicolor/scalable/apps/archlinux-wm-blackbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-dwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-fluxbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-fvwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-gnome.svg \
	icons/hicolor/scalable/apps/archlinux-wm-icewm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-jwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kde2.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kdemod.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kde.svg \
	icons/hicolor/scalable/apps/archlinux-wm-openbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-pekwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-twm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-wmaker.svg \
	icons/hicolor/scalable/apps/archlinux-wm-xfce.svg \
	icons/hicolor/scalable/apps/archlinux-wm-xmonad.svg \
	icons/hicolor/scalable/apps/arch-logo.svg \
	icons/hicolor/scalable/apps/blackbox.svg \
	icons/hicolor/scalable/apps/ctwm.svg \
	icons/hicolor/scalable/apps/dwm.svg \
	icons/hicolor/scalable/apps/eeschema.svg \
	icons/hicolor/scalable/apps/evilwm.svg \
	icons/hicolor/scalable/apps/fluxbox.svg \
	icons/hicolor/scalable/apps/GNUstep3D.svg \
	icons/hicolor/scalable/apps/GNUstep.svg \
	icons/hicolor/scalable/apps/i3.svg \
	icons/hicolor/scalable/apps/jwm.svg \
	icons/hicolor/scalable/apps/larswm.svg \
	icons/hicolor/scalable/apps/mwm.svg \
	icons/hicolor/scalable/apps/pawm.svg \
	icons/hicolor/scalable/apps/pekwm.svg \
	icons/hicolor/scalable/apps/spectrwm.svg \
	icons/hicolor/scalable/apps/twm.svg \
	icons/hicolor/scalable/apps/velox.svg \
	icons/hicolor/scalable/apps/vtwm.svg \
	icons/hicolor/scalable/apps/windwm.svg \
	icons/hicolor/scalable/apps/wm2.svg \
	icons/hicolor/scalable/apps/wmaker.svg \
	icons/hicolor/scalable/apps/wmii.svg \
	icons/hicolor/scalable/apps/wmx.svg \
	icons/hicolor/scalable/apps/xdwm.svg \
	icons/hicolor/scalable/apps/xlogo.svg \
	icons/hicolor/scalable/apps/yeahwm.svg

nobase_dist_share_DATA += \
	$(scalable_ICONS)

install-data-local:
	$(NORMAL_INSTALL)
	list="$(scalable_ICONS)" ; for f in $$list ; do \
		p=`basename "$$f" .svg`.png ; \
		d=; if test -f "$(srcdir)/$$f" ; then d="$(srcdir)/" ; fi ; \
		if test "$$p" = "xlogo.png" -o "$$p" = "arch-logo.png"; then \
			sizes="16 22 24 32 36 48 56 64 72 96 100 128 256" ; \
		else \
			sizes="16 24 32 48 56 64" ; \
		fi ; \
		for s in $$sizes ; do \
			t="$(DESTDIR)$(sharedir)/icons/hicolor/$${s}x$${s}/apps" ; \
			test -d "$$t" || $(MKDIR_P) "$$t" ; \
			rsvg-convert -w $$s -h $$s -f png "$$d$$f" -o "$$t/$$p" ; \
		done ; \
	done

# rsvg-convert -w $$s -h $$s -f png "$$d$$f" -o "$$t/$$p"
# convert -resize $${s}x$${s} -background None "$$d$$f" "$$t/$$p"
